UNRELEASED CHANGES:

* Add Danish krone currency
* Add Czech translation
* Fix https issue on password reset

RELEASED VERSIONS:

v0.4.0 - 2017-07-13
-------------------

New features:
* Add ability to keep track of phone calls.

Improvements:
* Fix Google Contact instructions link on the Import screen.
* Input field are now automatically selected when a radio button is checked.
* Many small bug fixes.

v0.3.0 - 2017-07-04
-------------------

New features:
* Add support for organizing people into tags (requires `bower update` for dev environment).
* Add ability to filter contacts per tags on the contact list.

Improvements:
* Fix import translation key on the import reports.
* Settings' sidebar now has better icons.

v0.2.1 - 2017-07-02
-------------------

Improvements:
* Update the design of the latest actions on the dashboard.
* Change order of first and last names fields on contact add/edit, if the name order is defined as "last name, first name".
* Speed up the display of the contact lists when there is a lot of contacts in the account.
* Remove the search on the list of contacts, which was broken for a while, until a proper solution is found.
* Bug fixes.

v0.2.0 - 2017-06-29
-------------------

New features:
* Add import from vCard (or .vcf) in the Settings panel.
* Add ability to reset account. Resetting an account will remove everything - but won't close the account like deletion would.

Improvements:
* Journal entries now respect new lines.
* Fix name not appearing in the latest actions tab on the dashboard.

v0.1.0 - 2017-06-26
-------------------

* First official release. We'll now follow this structure. If you self host, we highly recommend that you check the latest tag instead of pulling from master.

2017-06-24
----------

Improvements:
* On the people's tab, filters are now placed above the table.

2017-06-22
----------

New features:
* Add ability to define name order (Firstname Lastname or Lastname Firstname) in the Settings panel.
